--- a/merge_style.css
+++ b/merge_style.css
@@ -2,7 +2,7 @@
 /* Global */
 /* ----------------------------------------------------------------- */
 body {
-  background: #212326;
+  background: grey;
 }
 
 main {
@@ -15,9 +15,14 @@ main {
 /* Header */
 /* ----------------------------------------------------------------- */
 header {
-  font-family: "Livvic", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   color: #fff;
   margin-bottom: 20px;
+}
+
+h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
 }
 
 header h1 {
@@ -40,93 +45,20 @@ header div.gradient-border {
   width: 95%;
   height: 1px;
   margin: 0 auto;
-  background: -webkit-gradient(linear, left top, right top, from(#64d419), to(#048700));
-  background: linear-gradient(to right, #64d419, #048700);
+  background: rgb(50 75 32);
 }
 
 /* ----------------------------------------------------------------- */
 /* Settings */
 /* ----------------------------------------------------------------- */
-div#settings {
-  height: 100vh;
-  width: 400px;
-  left: -400px;
-  top: 0;
-  position: fixed;
-  -webkit-transition: all .4s ease;
-  transition: all .4s ease;
-  z-index: 5;
-  background: rgba(22, 22, 22, 0.95);
-  font-family: 'Livvic', sans-serif;
+.settings {
   text-align: center;
-  color: #fff;
-  display: block;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
-div#settings div#close-menu {
-  cursor: pointer;
-  margin: 15px 0 15px 0;
-  color: red;
-}
-
-div#settings div#close-menu {
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
-}
-
-div#settings div#close-menu:hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-}
-
-div#settings h2 {
-  width: 40%;
-  margin: 0 auto;
-  margin-bottom: 15px;
-  border-bottom: 1px solid #fff;
-  padding-bottom: 7px;
-}
-
-div#settings input {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 90%;
-  margin: 0 auto;
-}
-
-div#settings input#timeout {
-  width: 40%;
-}
-
-div#settings div.errors, div#settings div.success {
-  width: 90%;
-  margin: 0 auto;
-  height: 40px;
-  margin-top: 50px;
-}
-
-div#settings button {
-  cursor: pointer;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border: 0;
-  height: 32px;
-  width: 50%;
-  margin: 10px auto 0 auto;
-  background: -webkit-gradient(linear, left top, right top, from(#64d419), to(#048700));
-  background: linear-gradient(to right, #64d419, #048700);
-  border-radius: 5px;
-  color: #fff;
-}
-
-div#settings button {
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
-}
-
-div#settings button:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+#arr {
+  width: 20%;
 }
 
 /* ----------------------------------------------------------------- */
@@ -157,9 +89,10 @@ section.animation-zone div.array-container div.array-element {
   height: 40px;
   width: 40px;
   margin: 0 1px 0 1px;
-  background: #d41e1e;
+  background: firebrick;
   text-align: center;
-  font-family: "Livvic", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
   font-weight: bold;
 }
 
@@ -169,30 +102,27 @@ section.animation-zone div.array-container div.array-element p {
 }
 
 /* ----------------------------------------------------------------- */
-/* Errors */
-/* ----------------------------------------------------------------- */
-.errors p, .succes p {
-  font-family: "Livvic", sans-serif;
-  font-weight: bold;
-  text-align: center;
-  color: #d41e1e;
-  -webkit-transition: all ease-in-out .3s;
-  transition: all ease-in-out .3s;
-}
-
-.success p {
-  color: green;
-}
-
-/* ----------------------------------------------------------------- */
 /* Buttons */
 /* ----------------------------------------------------------------- */
-section.buttons {
+
+#save-settings {
+  font-family: Arial, Helvetica, sans-serif;
+  width: 10%;
+  background: rgb(50 75 32);
+  font-weight: bold;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1rem;
+  border: none;
+  border-radius: 5px;
+}
+
+.buttons {
   position: fixed;
   bottom: 7%;
   width: 90%;
   margin: 0 auto;
-  font-family: "Livvic", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 section.buttons div.wrapper {
@@ -229,21 +159,16 @@ section.buttons button:hover {
 }
 
 section.buttons button#sort {
-  background: -webkit-gradient(linear, left top, right top, from(#64d419), to(#048700));
-  background: linear-gradient(to right, #64d419, #048700);
+  background: rgb(50 75 32);
 }
 
 section.buttons button#unsort {
-  background: -webkit-gradient(linear, left top, right top, from(#b80000), to(#d41e1e));
-  background: linear-gradient(to right, #b80000, #d41e1e);
+  background: firebrick;
 }
 
 @media (max-width: 570px) {
   h1 {
     font-size: 1.2rem;
-  }
-  div#settings {
-    width: 300px;
   }
   section.animation-zone div.array-container div.array-element {
     width: 30px;
