--- a/merge_style.css
+++ b/merge_style.css
@@ -5,6 +5,7 @@ body {
   background: grey;
 }
 
+
 main {
   position: relative;
   width: 90%;
@@ -58,7 +59,15 @@ header div.gradient-border {
 }
 
 #arr {
-  width: 20%;
+  width: 296px;
+  background-color: rgb(221 224 227);
+  border: none; /* Removes the default border */
+  box-shadow: none; /* Removes any shadow effects */
+  padding-bottom: 5px;
+  font-size: 18px;
+  line-height: 8px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 20px;
 }
 
 /* ----------------------------------------------------------------- */
@@ -105,9 +114,24 @@ section.animation-zone div.array-container div.array-element p {
 /* Buttons */
 /* ----------------------------------------------------------------- */
 
-#save-settings {
+#random {
+  padding: 15px 40px;
+  border: none;
+  outline: none;
+  position: relative;
+  border-radius: 5px;
+  background: linear-gradient(to right, #00FFA3, #DC1FFF);
+  cursor: pointer;
+  color: #fff;
+  font-size: 18px;
+  line-height: 8px;
   font-family: Arial, Helvetica, sans-serif;
-  width: 10%;
+  font-weight: bold;
+}
+
+#save-settings {
+  padding: 15px 60px;
+  font-family: Arial, Helvetica, sans-serif;
   background: rgb(50 75 32);
   font-weight: bold;
   color: #fff;
@@ -115,6 +139,8 @@ section.animation-zone div.array-container div.array-element p {
   font-size: 1rem;
   border: none;
   border-radius: 5px;
+  font-size: 18px;
+  line-height: 8px;
 }
 
 .buttons {
@@ -179,4 +205,3 @@ section.buttons button#unsort {
     line-height: 8px;
   }
 }
-/*# sourceMappingURL=main.css.map */
